ymlscripts/DEPwithREADINESS.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3
  minReadySeconds: 10                 ❶
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0               ❷
    type: RollingUpdate
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: luksa/kubia:v3
        name: nodejs
        readinessProbe:
          periodSeconds: 1          ❸
          httpGet:                  ❹
            path: /                 ❹
            port: 8080              ❹
