ymlscripts/PVandPVCwithPOD.yml
kind: Pod
apiVersion: v1
metadata:
   name: mypod
   labels:
      name: frontendhttp
spec:
   containers:
   - name: myfrontend
     image: nginx
     ports:
      - containerPort: 80
        name: "http-server"
   volumeMounts: 
      - mountPath: "/usr/share/tomcat/html"
        name: mypd
   volumes: 
      - name: mypd
   persistentVolumeClaim:
      claimName: myclaim-1
