ymlscripts/deploymentCPUrequests.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia
spec:
  replicas: 3                     
  template:
    metadata:
      name: kubia
      labels:
        app: kubia
    spec:
      containers:
      - image: luksa/kubia:v1     
        name: kubia
        resources:              
          requests:             
            cpu: 100m
