ymlscripts/requests-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: requests-pod
spec:
  containers:
  - image: busybox
    command: ["dd", "if=/dev/zero", "of=/dev/null"]
    name: main              
    resources:             
      requests:             
        cpu: 200m           
        memory: 10Mi
