ymlscripts/app-dep.yml.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp-deployment
  labels:
    app: vproapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: visualpath/vpromultiapp
        ports:
        - name: vproapp-port
          containerPort: 8080
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: 200m

---
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
spec:
  ports:
  - port: 80
#    nodePort: 31001
    targetPort: vproapp-port
    protocol: TCP
  selector:
    app: vproapp
  type: LoadBalancer
